Added more comments explaining swagger annotation
