# app/Http/Controllers/ShowController.php
@@ -8,10 +8,13 @@ use Illuminate\Http\Response;
 use App\Http\Resources\ShowResource;
 use App\Http\Resources\ShowCollection;
 
+// Swagger annotations are included in this ShowController which generates the API Documentation at 
+
+
 class ShowController extends Controller
 {
     /**
-     * Display a listing of the show resource.
+     * Display a listing of the show resource in swagger API documentation.
      *
      *
  * @OA\Get(
@@ -41,8 +44,10 @@ class ShowController extends Controller
         return new ShowCollection(Show::all());
     }
 
+// Allows for creation of a new Show using Swagger
+
     /**
-     * Store a newly created resource in storage.
+     * Store a newly created show resource in storage.
      * 
      * @OA\Post(
      *      path="/api/shows",
@@ -100,8 +105,10 @@ class ShowController extends Controller
         return new ShowResource($show);
     }
 
+     // Allows Swagger to get a show by id
+
     /**
-     * Display the specified resource.
+     * Display the specified show resource.
      * @OA\Get(
     *     path="/api/shows/{id}",
     *     description="Gets a show by ID",
@@ -137,8 +144,10 @@ class ShowController extends Controller
         return new ShowResource($show);
     }
 
+   // Allows swagger to update a specific show
+
     /**
-     * Update the specified resource in storage.
+     * Update the specified show resource in storage.
       *
      *
      * @OA\Put(
@@ -147,19 +156,38 @@ class ShowController extends Controller
      *    tags={"Shows"},
      *    summary="Update a Show",
      *    description="Update Show",
-     *    @OA\Parameter(name="id", in="path", description="Updatea Show", required=true,
-     *        @OA\Schema(type="integer")
-     *    ),
-     *    @OA\Response(
-     *         response=Response::HTTP_NO_CONTENT,
-     *         description="Success",
-     *         @OA\JsonContent(
-     *         @OA\Property(property="status_code", type="integer", example="204"),
-     *         @OA\Property(property="data",type="object")
+     *    // id is required to specify which show is to be updated 
+     *    @OA\Parameter(
+        *          name="id",
+        *          description="Show id",
+        *          required=true,
+        *          in="path",
+        *          @OA\Schema(
+        *              type="integer")
      *          ),
-     *       )
-     *      )
-     *  )
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *           // The required values must be entered into the body
+     *            required={"id", "title", "genre", "synopsis", "user_rating", "network", "creator", "seasons", "src"},
+     *             @OA\Property(property="title", type="string", format="string", example="Sample Title"),
+     *            @OA\Property(property="genre", type="string", format="string", example="Sample Genre"),
+     *            @OA\Property(property="synopsis", type="string", format="string", example="A long description about this great show"),
+     *            @OA\Property(property="user_rating", type="integer", format="string", example="2"),
+     *             @OA\Property(property="network", type="string", format="integer", example="examplenetwork"),
+     *              @OA\Property(property="creator", type="string", format="string", example="Me"),
+     *             @OA\Property(property="seasons", type="integer", format="integer", example="1"),
+     *              @OA\Property(property="src", type="string", format="string", example="blah")
+     *          )
+     *      ),
+     *     @OA\Response(
+     *          response=200, description="Success",
+     *          @OA\JsonContent(
+     *             @OA\Property(property="status", type="integer", example=""),
+     *             @OA\Property(property="data",type="object")
+     *          )
+     *     )
+     * )
      *
      * @param  \Illuminate\Http\Request  $request
      * @param  \App\Models\Show  $show
@@ -182,6 +210,10 @@ class ShowController extends Controller
      
         return new ShowResource($show);
     }
+
+
+// Allows a book resource to be deleted using Swagger
+
 /**
      *
      *
@@ -205,7 +237,7 @@ class ShowController extends Controller
      *      )
      *  )
      *
-     * Remove the specified resource from storage.
+     * Remove the specified show resource from storage.
      *
      * @param  \App\Models\Show  $show
      * @return \Illuminate\Http\Response
